[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Training project at the end of the 3 module"
authors = ["Denis Tabakov <spbtabakoff@yandex.com>"]
packages = [
  { include = "page_analyzer" },
]
repository = "https://github.com/DenisTabakov/python-project-83"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: Free For Educational Use",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education :: Testing"
]
[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
page_analyzer = "app:main"