[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Training project at the end of the 3 module"
authors = ["Denis Tabakov <spbtabakoff@yandex.com>"]
packages = [{include = "page_analyzer"}]

repository = "https://github.com/DenisTabakov/python-project-83"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: Free For Educational Use",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education :: Testing"
]
[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"